Fixed grid layout on mobile

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -29,7 +29,6 @@
 
 @media (min-width: 501px) and (max-width: 1004px) {
   .dashboard {
-    grid-template-columns: auto 1fr;
     max-width: 705px;
   }
 }
